# bob

./: .gitignore  Cargo.toml  Dockerfile  README.md  bob_tag.txt
scripts/: run.sh
src/: discord_log.rs  docker.rs  github.rs  main.rs  store.rs  webhook.rs
