[package]
name = "bob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1"
octocrab = "0.16"
futures = "0.3"
git2 = "0.14"
tar = "0.4"
dotenv = "0.15"
serenity = "0.11"
lazy_static = "0.2"
